--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.filter-nav {
+  width: 100%;
+  min-height: 8vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.filter-nav-links {
+  color: #000 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.filter-nav-links:hover {
+  color: blue !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hero__img {
+  width: 100%;
+  height: 50vh;
+  margin: 0;
+  padding: 0;
+  background-image: url("https://process.fs.grailed.com/AJdAgnqCST4iPtnUxiGtTz/auto_image/cache=expiry:max/rotate=deg:exif/output=quality:90/compress/https://process.fs.grailed.com/DDMneuqTfSo6bDMUVff4");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
